[gd_scene load_steps=2 format=3 uid="uid://ci2fcxc5eos5e"]

[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/MarketSection/MarketItem.gd" id="1_l38ek"]

[node name="MarketItem" type="ColorRect"]
custom_minimum_size = Vector2(768, 140)
color = Color(0.513726, 0.415686, 0.243137, 1)
script = ExtResource("1_l38ek")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="LabelHBox" type="HBoxContainer" parent="HBox/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MC" type="MarginContainer" parent="HBox/VBox/LabelHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = -5
theme_override_constants/margin_bottom = -2

[node name="ItemTitleLabel" type="Label" parent="HBox/VBox/LabelHBox/MC"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "Oak"
vertical_alignment = 2

[node name="MC2" type="MarginContainer" parent="HBox/VBox/LabelHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="WoodCountLabel" type="Label" parent="HBox/VBox/LabelHBox/MC2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 13
text = "10 wood"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MC" type="MarginContainer" parent="HBox/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="HBox/VBox/MC"]
layout_mode = 2
color = Color(0.4, 0.305882, 0.137255, 1)

[node name="VBox" type="VBoxContainer" parent="HBox/VBox/MC"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="HBox/VBox/MC/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = -3
theme_override_constants/margin_bottom = -6

[node name="SellPrecentigeLabel" type="Label" parent="HBox/VBox/MC/VBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "15%"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox/VBox/MC/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = -2

[node name="SellAmountSlider" type="HSlider" parent="HBox/VBox/MC/VBox/MC2"]
layout_mode = 2
value = 15.0

[node name="HBox" type="HBoxContainer" parent="HBox/VBox/MC/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="MC3" type="MarginContainer" parent="HBox/VBox/MC/VBox/HBox"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 9

[node name="SellButton" type="Button" parent="HBox/VBox/MC/VBox/HBox/MC3"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Sell"

[node name="MC" type="MarginContainer" parent="HBox/VBox/MC/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 9

[node name="ColorRect" type="ColorRect" parent="HBox/VBox/MC/VBox/HBox/MC"]
layout_mode = 2
color = Color(0.729412, 0.619608, 0.419608, 1)

[node name="VBox" type="VBoxContainer" parent="HBox/VBox/MC/VBox/HBox/MC"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="HBox/VBox/MC/VBox/HBox/MC/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = -2
theme_override_constants/margin_bottom = -2

[node name="SellLabel" type="Label" parent="HBox/VBox/MC/VBox/HBox/MC/VBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "SELL"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox/VBox/MC/VBox/HBox/MC/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = -4
theme_override_constants/margin_bottom = -1

[node name="SellAmountLabel" type="Label" parent="HBox/VBox/MC/VBox/HBox/MC/VBox/MC2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.286275, 0.211765, 0.0784314, 1)
theme_override_font_sizes/font_size = 13
text = "10k Oak"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox/VBox/MC/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 9

[node name="ColorRect" type="ColorRect" parent="HBox/VBox/MC/VBox/HBox/MC2"]
layout_mode = 2
color = Color(0.286275, 0.211765, 0.0784314, 1)

[node name="VBox" type="VBoxContainer" parent="HBox/VBox/MC/VBox/HBox/MC2"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="HBox/VBox/MC/VBox/HBox/MC2/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = -2
theme_override_constants/margin_bottom = -2

[node name="GetLabel" type="Label" parent="HBox/VBox/MC/VBox/HBox/MC2/VBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "GET"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox/VBox/MC/VBox/HBox/MC2/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = -4
theme_override_constants/margin_bottom = -1

[node name="GoldGainLabel" type="Label" parent="HBox/VBox/MC/VBox/HBox/MC2/VBox/MC2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.74902, 0, 1)
theme_override_font_sizes/font_size = 13
text = "128 gold"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="HBox/MC2"]
layout_mode = 2
color = Color(0.4, 0.305882, 0.137255, 1)

[node name="VBox" type="VBoxContainer" parent="HBox/MC2"]
layout_mode = 2

[node name="HBox2" type="HBoxContainer" parent="HBox/MC2/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MC3" type="MarginContainer" parent="HBox/MC2/VBox/HBox2"]
custom_minimum_size = Vector2(165, 0)
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="ColorRect" type="ColorRect" parent="HBox/MC2/VBox/HBox2/MC3"]
layout_mode = 2
color = Color(0.439216, 0.313726, 0.0901961, 1)

[node name="VBox" type="VBoxContainer" parent="HBox/MC2/VBox/HBox2/MC3"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="HBox/MC2/VBox/HBox2/MC3/VBox"]
layout_mode = 2
theme_override_constants/margin_top = -2
theme_override_constants/margin_bottom = -1

[node name="Label" type="Label" parent="HBox/MC2/VBox/HBox2/MC3/VBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Bots"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox/MC2/VBox/HBox2/MC3/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 17
theme_override_constants/margin_top = -4
theme_override_constants/margin_right = 17
theme_override_constants/margin_bottom = 6

[node name="ColorRect" type="ColorRect" parent="HBox/MC2/VBox/HBox2/MC3/VBox/MC2"]
layout_mode = 2
color = Color(0.486275, 0.352941, 0.105882, 1)

[node name="BotCountLabel" type="Label" parent="HBox/MC2/VBox/HBox2/MC3/VBox/MC2/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "20"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox/MC2/VBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 15

[node name="HBox" type="HBoxContainer" parent="HBox/MC2/VBox/HBox2/MC2"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="BuyButton" type="Button" parent="HBox/MC2/VBox/HBox2/MC2/HBox"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Buy"

[node name="Buy10xButton" type="Button" parent="HBox/MC2/VBox/HBox2/MC2/HBox"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "10x"

[node name="Buy100xButton" type="Button" parent="HBox/MC2/VBox/HBox2/MC2/HBox"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "100x"

[node name="Buy1000xButton" type="Button" parent="HBox/MC2/VBox/HBox2/MC2/HBox"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "1000x"

[node name="HBox" type="HBoxContainer" parent="HBox/MC2/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="MC" type="MarginContainer" parent="HBox/MC2/VBox/HBox"]
custom_minimum_size = Vector2(165, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MC" type="MarginContainer" parent="HBox/MC2/VBox/HBox/MC"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = -3
theme_override_constants/margin_bottom = -6

[node name="BotEffectivnesLabel" type="Label" parent="HBox/MC2/VBox/HBox/MC/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Effect: 15%"
horizontal_alignment = 1

[node name="BotEffectivnesSlider" type="HSlider" parent="HBox/MC2/VBox/HBox/MC"]
layout_mode = 2
size_flags_vertical = 8
value = 15.0

[node name="MC2" type="MarginContainer" parent="HBox/MC2/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 12

[node name="ColorRect" type="ColorRect" parent="HBox/MC2/VBox/HBox/MC2"]
layout_mode = 2
color = Color(0.729412, 0.619608, 0.419608, 1)

[node name="VBox" type="VBoxContainer" parent="HBox/MC2/VBox/HBox/MC2"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="HBox/MC2/VBox/HBox/MC2/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = -2

[node name="SellLabel" type="Label" parent="HBox/MC2/VBox/HBox/MC2/VBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "SELLING"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox/MC2/VBox/HBox/MC2/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = -4
theme_override_constants/margin_bottom = -1

[node name="PerSecondSoldLabel" type="Label" parent="HBox/MC2/VBox/HBox/MC2/VBox/MC2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.286275, 0.211765, 0.0784314, 1)
theme_override_font_sizes/font_size = 13
text = "10k Oak"
horizontal_alignment = 1

[node name="MC3" type="MarginContainer" parent="HBox/MC2/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 12

[node name="ColorRect" type="ColorRect" parent="HBox/MC2/VBox/HBox/MC3"]
layout_mode = 2
color = Color(0.286275, 0.211765, 0.0784314, 1)

[node name="VBox" type="VBoxContainer" parent="HBox/MC2/VBox/HBox/MC3"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="HBox/MC2/VBox/HBox/MC3/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = -2

[node name="GetLabel" type="Label" parent="HBox/MC2/VBox/HBox/MC3/VBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "GETTING"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox/MC2/VBox/HBox/MC3/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = -4
theme_override_constants/margin_bottom = -1

[node name="PerSecondGainLabel" type="Label" parent="HBox/MC2/VBox/HBox/MC3/VBox/MC2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.74902, 0, 1)
theme_override_font_sizes/font_size = 13
text = "128 gold"
horizontal_alignment = 1

[connection signal="value_changed" from="HBox/VBox/MC/VBox/MC2/SellAmountSlider" to="." method="_on_sell_amount_slider_value_changed"]
